🚧 메인 Image & Circle 수정

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SU JEONG's SITE</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/layout.css">
   <link rel="stylesheet" href="assets/css/animation.css">
@@ -25,7 +25,7 @@
   <section class="sec_01">
     <div class="title_area">
       <h2 class="title">
-        Hello! <em><img src="/assets/img/hands.png" alt="인사"></em><br>
+        Hello! <em><img src="./assets/img/hands.png" alt="인사"></em><br>
         I'm Your
         Friendly <br>
         Web Publisher <br>
@@ -34,7 +34,7 @@
     </div>
     <div class="img_area">
       <div class="thumb">
-        <img src="/assets/img/main_profile.jpg" alt="프로필">
+        <img src="./assets/img/main_profile.jpg" alt="프로필">
       </div>
       <div class="circle type_01"></div>
       <div class="circle type_02"></div>
