--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="sec_01_wrap">
           <div class="title_area">
             <h2 class="title">
-              Hello! <em><img src="assets/img/hands.png" alt="인사"></em><br>
+              Hello! <em><img src="./assets/img/hands.png" alt="인사"></em><br>
               <div class="text">
                 <p>I'm Your</p>
                 <p>
@@ -118,7 +118,7 @@
           </div>
           <div class="thumb_area">
             <div class="thumb pointer_event">
-              <img src="assets/img/main_profile.jpg" alt="프로필">
+              <img src="./assets/img/main_profile.jpg" alt="프로필">
             </div>
             <div class="circle type_01"></div>
             <div class="circle type_02"></div>
@@ -476,27 +476,27 @@
         <div class="modal_center">
           <div class="center_wrap">
             <ul class="introduce">
-              <li><img src="/assets/img/birth.png" alt="생일">
+              <li><img src="./assets/img/birth.png" alt="생일">
                 <p>1997.12.12</p>
               </li>
-              <li><img src="/assets/img/tel.png" alt="전화번호">
+              <li><img src="./assets/img/tel.png" alt="전화번호">
                 <p>010.4687.8909</p>
               </li>
-              <li><img src="/assets/img/location.png" alt="지역">
+              <li><img src="./assets/img/location.png" alt="지역">
                 <p>Seoul, Korea</p>
               </li>
-              <li><img src="/assets/img/email.png" alt="메일">
+              <li><img src="./assets/img/email.png" alt="메일">
                 <p>donajun@naver.com</p>
               </li>
-              <li><img src="/assets/img/lang.png" alt="언어">
+              <li><img src="./assets/img/lang.png" alt="언어">
                 <p>HTML, CSS, SCSS, VUE, JAVASCRIPT, JQUERY</p>
               </li>
-              <li><img src="/assets/img/lang.png" alt="툴">
+              <li><img src="./assets/img/lang.png" alt="툴">
                 <p>FIGMA, XD, PHOTOSHOP, ILLUSTRATOR</p>
               </li>
             </ul>
             <div class="modal_photo">
-              <img src="/assets/img/me_img.png" alt="이미지">
+              <img src="./assets/img/me_img.png" alt="이미지">
             </div>
           </div>
         </div>
