--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
           <div class="contWrap">
             <h3>내가 생각한 숫자는 몇 일까요?</h3>
             <p class="result">(1부터 10사이)</p>
-            <input type="number" value="1" max="10" min="1">
+            <input id="random_input" type="number" value="1" max="10" min="1">
             <button type="button" class="startBtn">확인</button>
           </div>
         </div>
