--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="assets/img/favicon.ico">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/layout.css">
+  <link rel="stylesheet" href="assets/css/layout_mobile.css">
   <link rel="stylesheet" href="assets/css/animation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
   <script src="assets/js/main.js" defer></script>
@@ -436,7 +437,7 @@
             <div class="contact_info">
               <a target="_blank" href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=donajun@naver.com"
                 class="contact_mail pointer_event">
-                donajun@naver.com
+                s.rystal0212@gmail.com
               </a>
             </div>
           </div>
@@ -477,7 +478,7 @@
           <div class="center_wrap">
             <ul class="introduce">
               <li><img src="./assets/img/birth.png" alt="생일">
-                <p>1997.12.12</p>
+                <p>1997.2.12</p>
               </li>
               <li><img src="./assets/img/tel.png" alt="전화번호">
                 <p>010.4687.8909</p>
